# Customer_360_platform

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  docker.yml
airflow/: README.md
airflow/dags/: README.md  customer360_dags.py
airflow/plugins/: README.md
configs/: README.md  dev.yaml  prod.yaml  splink_customer_matching.yaml  test.yaml
dashboards/: README.md
dashboards/domo/: README.md  customer360_dashboard_contract.md
data/: README.md
data/processed/: README.md
data/raw/: README.md
data/reference/: README.md
dbt/: README.md
dbt/customer360/: README.md  dbt_project.yml  profiles.yml
docker/: README.md  airflow-init.sh
docs/: README.md  architecture.md  cicd.md  containerization.md  data_dictionary.md  final_architecture.md  onboarding.md  production_hardening_review.md
great_expectations/: README.md  great_expectations.yml
great_expectations/checkpoints/: README.md  customer360_data_quality_checkpoint.yml
great_expectations/expectations/: README.md  customer_enrichment_metrics_suite.json  customer_health_scores_suite.json  customer_silver_suite.json  gold_customer_master_suite.json
great_expectations/plugins/: README.md
notebooks/: README.md
sql/: README.md
sql/admin/: 001_create_warehouses.sql  README.md
sql/analytics/: 001_customer_health_scores.sql  002_build_customer_health_features.sql  003_merge_customer_health_scores.sql  004_merge_customer_health_model_evaluations.sql  005_merge_data_quality_results.sql  006_build_data_quality_dashboard_daily.sql  007_merge_enterprise_audit_logs.sql  008_build_domo_reporting_layer.sql  README.md
sql/bronze/: 001_bronze_tables.sql  README.md
sql/gold/: 001_gold_customer_master.sql  002_merge_gold_customer_clusters.sql  003_generate_gold_customer_master.sql  004_generate_customer_enrichment_metrics.sql  README.md
sql/landing/: 001_create_database_and_schemas.sql  002_file_formats_stages_and_control_tables.sql  README.md
sql/security/: 001_create_roles.sql  002_grant_privileges.sql  003_masking_policies.sql  README.md
sql/silver/: 001_silver_tables.sql  002_merge_silver_customer.sql  003_merge_silver_customer_metric_daily.sql  004_merge_silver_partner_profile.sql  005_insert_silver_data_quality_metrics.sql  README.md
src/: README.md
src/customer360/: README.md  __init__.py  config.py  logging.py
tests/: README.md  conftest.py
tests/fixtures/: README.md
tests/integration/: README.md  test_snowflake_integration.py
tests/unit/: README.md  test_airflow_jobs.py  test_audit_framework.py  test_classification.py  test_classification_extended.py  (+14 more)
(+107 files in other folders)
