[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer360-platform"
version = "0.1.0"
description = "Enterprise Customer 360 Data Enrichment Platform using Snowflake, Airflow, dbt, Splink, Great Expectations, and Domo."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Customer 360 Data Engineering" }]
dynamic = ["dependencies"]

[project.scripts]
customer360 = "customer360.interfaces.cli.main:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "airflow"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "--cov=customer360 --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: integration tests that exercise adapters or cross-module contracts",
    "snowflake: Snowflake adapter contract tests that run without live Snowflake credentials",
    "unit: fast unit tests for domain and application behavior",
]

[tool.coverage.run]
branch = true
source = ["src/customer360"]
omit = [
    "src/customer360/interfaces/airflow/jobs.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
